[gd_scene load_steps=8 format=3 uid="uid://dhqfl0x36hi13"]

[ext_resource type="Script" uid="uid://dsbnvktd68h8i" path="res://Scripts/level_select.gd" id="1_lx4vd"]
[ext_resource type="Theme" uid="uid://bncgplyvgv608" path="res://Materials/default_theme.tres" id="1_nkys2"]
[ext_resource type="FontFile" uid="uid://cwp8ay1qwwtb0" path="res://Materials/Terminal F4.ttf" id="2_lx4vd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwpe3"]
bg_color = Color(0.813257, 0.813258, 0.813258, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.466181, 0.466181, 0.466181, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1vtq"]
bg_color = Color(0.647715, 0.751657, 0.88579, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.745098, 0.815686, 0.921569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xn5i6"]
bg_color = Color(0.431872, 0.579515, 0.768414, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.745098, 0.815686, 0.921569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7b5r"]
bg_color = Color(0.647715, 0.751657, 0.88579, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.745098, 0.815686, 0.921569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Departure Map" type="Panel"]
custom_minimum_size = Vector2(290, 401)
theme_override_styles/panel = SubResource("StyleBoxFlat_vwpe3")
script = ExtResource("1_lx4vd")

[node name="Level Indicator" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.0
offset_top = 15.0
offset_right = 135.0
offset_bottom = 73.0
grow_horizontal = 2
theme = ExtResource("1_nkys2")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[color=orange]Level 1[/color]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 90.0
offset_right = -8.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 140

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nkys2")
theme_override_fonts/font = ExtResource("2_lx4vd")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_b1vtq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xn5i6")
theme_override_styles/normal = SubResource("StyleBoxFlat_v7b5r")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nkys2")
theme_override_fonts/font = ExtResource("2_lx4vd")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_b1vtq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xn5i6")
theme_override_styles/normal = SubResource("StyleBoxFlat_v7b5r")

[node name="DEBUG" type="Button" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 134.0
offset_right = 550.0
offset_bottom = 221.0
text = "DEBUG"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="DEBUG" to="." method="_on_debug_pressed"]
